Adding a main section to the bower.json file.

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,9 @@
   "authors": [
     "Daniel Phillips <dphildev@gmail.com>"
   ],
+  "main": [
+    "additions.js"
+  ],
   "keywords": [
     "three.js",
     "matrix"
