--- a/bower.json
+++ b/bower.json
@@ -23,10 +23,10 @@
     "tests.js"
   ],
   "dependencies": {
-    "threejs": "r71",
-    "underscore": "~1.8.3"
+    "threejs": "r71"
   },
   "devDependencies": {
-    "qunit": "~1.18.0"
+    "qunit": "~1.18.0",
+    "underscore": "~1.8.3"
   }
 }
